# llvm-ffi

./: LICENSE  Makefile  llvm-ffi.cabal
cbits/: extra.cpp  support.cpp
ctest/: Makefile  avx-instruction-selection.c  callattribute.c  create-execution-engine.cpp  create-execution-engine.h  fastmath.c
example/: Common.hs  Host.hs  JIT.hs  Offset.hs
flatpak/: llvm-3.8.1.json  llvm-3.9.1.json  llvm-6.0.1.json  llvm-7.1.0.json  llvm-8.0.1.json  llvm-9.0.0.json
include/: extra.h  support.h
src/10/LLVM/Raw/: Core.hsc
src/11/LLVM/Raw/: Core.hsc
src/12/LLVM/Raw/: Core.hsc
src/13/LLVM/Raw/: Core.hsc
src/14/LLVM/Raw/: Core.hsc
src/15/LLVM/Raw/: Core.hsc
src/16/LLVM/Raw/: Core.hsc
src/17/LLVM/Raw/: Core.hsc
src/3.9/LLVM/Raw/: Core.hsc
src/4.0/LLVM/Raw/: Core.hsc
src/5.0/LLVM/Raw/: Core.hsc
src/6.0/LLVM/Raw/: Core.hsc
src/7/LLVM/Raw/: Core.hsc
src/8/LLVM/Raw/: Core.hsc
src/9/LLVM/Raw/: Core.hsc
src/LLVM/FFI/: Analysis.hs  Analysis.hsc  Base.hsc  BitReader.hs  BitReader.hsc  BitWriter.hsc  Core.hsc  Error.hs  ExecutionEngine.hs  ExecutionEngine.hsc  Support.hsc  Target.hs  Target.hsc  TargetMachine.hsc  Version.hs
src/LLVM/FFI/Core/: Attribute.hs
src/LLVM/FFI/Support/: Host.hs
src/LLVM/FFI/Transforms/: IPO.hs  IPO.hsc  PassBuilder.hs  PassManagerBuilder.hs  Scalar.hs  Scalar.hsc  Vectorize.hs
src/LLVM/Raw/: Core_tmpl.hsc
src/before14/LLVM/FFI/: Core14.hs
src/from14/LLVM/FFI/: Core14.hs
tool/: DiffFFI.hs  FunctionMangler.hs  FunctionMangulation.hs  IntrinsicMangler.hs  ltrace.config
